# vintasend

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .vinta-ai-workflows.yaml  AGENTS.md  ATTACHMENTS.md  MIGRATION_TO_1.0.0.md  MIGRATION_TO_2.0.0.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml  tox.ini
.claude/agents/: fixer.md  implementer.md  reviewer.md
.claude/skills/: add-env-var  amend-plan  create-spec  deslop-comments  handoff  implement-phase  implement-plan  integrate-phase-modular  integrate-phase-stacked  open-pr-from-context  plan-feature  prepare-worktree  release-package  review-phase  systematic-debugging  thermo-nuclear-code-quality-review
.codex/agents/: fixer.toml  implementer.toml  reviewer.toml
.cursor/: skills
.cursor/agents/: fixer.md  implementer.md  reviewer.md
.github/: PUBLISHING.md  copilot-instructions.md
.github/agents/: fixer.agent.md  implementer.agent.md  reviewer.agent.md
.github/workflows/: ci.yml  publish.yml
ai-plans/: 2026-07-22-ATTACHMENT_MANAGER_SEAM_IMPLEMENTATION_PLAN.md  2026-07-22-BACKGROUND_SEND_QUEUE_SERVICE_IMPLEMENTATION_PLAN.md  2026-07-22-NOTIFICATION_CORRECTNESS_FIXES_IMPLEMENTATION_PLAN.md  2026-07-22-NOTIFICATION_FILTERING_API_IMPLEMENTATION_PLAN.md  2026-07-22-SHARED_SERVICE_HELPERS_IMPLEMENTATION_PLAN.md  2026-07-23-GIT_COMMIT_SHA_TRACKING_IMPLEMENTATION_PLAN.md  2026-07-23-IMPLEMENTATION_TEMPLATE_PACKAGE_IMPLEMENTATION_PLAN.md  2026-07-23-MULTI_BACKEND_REPLICATION_IMPLEMENTATION_PLAN.md  2026-07-23-RENDER_FROM_TEMPLATE_CONTENT_IMPLEMENTATION_PLAN.md  README.md  TRACKING_IMPLEMENTATION_TEMPLATE_PACKAGE.md  TRACKING_MULTI_BACKEND_REPLICATION.md  TRACKING_attachment-manager-seam.md  TRACKING_background-send-queue-service.md  TRACKING_notification-filtering-api.md  TRACKING_shared-service-helpers.md
ai-tools/: AGENTS.md  prs-context-template.md
ai-tools/agents/: README.md  fixer.yaml  implementer.yaml  reviewer.yaml
ai-tools/scripts/: link-claude-skills.mjs  setup-ai-tools.mjs
ai-tools/skills/add-env-var/: SKILL.md
ai-tools/skills/amend-plan/: SKILL.md
ai-tools/skills/create-spec/: SKILL.md
ai-tools/skills/deslop-comments/: SKILL.md
ai-tools/skills/handoff/: SKILL.md
ai-tools/skills/implement-phase/: SKILL.md
ai-tools/skills/implement-plan/: SKILL.md
ai-tools/skills/integrate-phase-modular/: SKILL.md
ai-tools/skills/integrate-phase-stacked/: SKILL.md
ai-tools/skills/open-pr-from-context/: SKILL.md
ai-tools/skills/open-pr-from-context/scripts/: open-pr.sh
ai-tools/skills/plan-feature/: SKILL.md
ai-tools/skills/plan-feature/resources/: ai-models.yaml
ai-tools/skills/prepare-worktree/: SKILL.md
ai-tools/skills/prepare-worktree/scripts/: claude-worktree-write-guard.py  gen-claude-sandbox-settings.sh  gen-compose-worktree-override.sh  sandbox-run.sh
ai-tools/skills/release-package/: SKILL.md
ai-tools/skills/review-phase/: SKILL.md
ai-tools/skills/systematic-debugging/: SKILL.md
ai-tools/skills/thermo-nuclear-code-quality-review/: SKILL.md
templates/vintasend-implementation-template/: README.md  pyproject.toml
templates/vintasend-implementation-template/scripts/: clone.py
templates/vintasend-implementation-template/tests/: test_adapter.py  test_attachment_manager.py  test_backend.py  test_queue_service.py  test_replication_queue_service.py  test_template_renderer.py
templates/vintasend-implementation-template/vintasend_implementation_template/: adapter.py  attachment_manager.py  backend.py  queue_service.py  replication_queue_service.py  template_renderer.py
vintasend/: app_settings.py  constants.py  exceptions.py
vintasend/services/: __init__.py  dataclasses.py  helpers.py  notification_service.py  service_utils.py  utils.py
vintasend/services/attachment_managers/: asyncio_base.py  base.py
vintasend/services/attachment_managers/stubs/: fake_attachment_manager.py
vintasend/services/git_commit_sha_providers/: asyncio_base.py  base.py
vintasend/services/git_commit_sha_providers/stubs/: fake_git_commit_sha_provider.py
vintasend/services/notification_adapters/: async_base.py  asyncio_background_base.py  asyncio_base.py  base.py
vintasend/services/notification_adapters/stubs/: fake_adapter.py  fake_in_app_adapter.py
vintasend/services/notification_backends/: asyncio_base.py  base.py  filters.py
vintasend/services/notification_backends/stubs/: fake_backend.py
vintasend/services/notification_queue_services/: asyncio_base.py  asyncio_replication_base.py  base.py  replication_base.py
vintasend/services/notification_queue_services/stubs/: fake_queue_service.py  fake_replication_queue_service.py
vintasend/services/notification_template_renderers/: base.py  base_templated_email_renderer.py  base_templated_sms_renderer.py
vintasend/services/notification_template_renderers/stubs/: fake_templated_email_renderer.py
vintasend/tasks/: __init__.py  background_tasks.py  periodic_tasks.py
vintasend/tests/: test_app_settings.py  test_template_checklist.py  test_template_clone_script.py  test_template_exclusion.py  utils.py
vintasend/tests/test_services/: test_attachment_managers.py  test_backend_migration.py  test_git_commit_sha.py  test_multi_backend_management.py  test_multi_backend_reads.py  test_multi_backend_replication.py  test_multi_backend_writes.py  test_notification_attachments.py  test_notification_filters.py  test_notification_queue_services.py  test_notification_service.py  test_render_from_content.py  test_service_utils.py
vintasend/tests/test_tasks/: test_background_tasks.py  test_periodic_tasks.py
vintasend/utils/: singleton_utils.py
