[project]
name = "vintasend"
version = "2.0.0"
description = "A flexible package for implementing transactional notifications"
authors = [{ name = "Hugo bessa", email = "hugo@vinta.com.br" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
# Constraints stay under [tool.poetry.dependencies] to keep caret syntax, which
# is not valid PEP 621. 'dynamic' tells build tooling the real list lives there.
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "vintasend" }]
include = [
  { path = "vintasend/py.typed", format = "wheel" }
]

[tool.poetry.dependencies]
typing-extensions = "^4.15.0"
packaging = "^26.2"
requests = "^2.34.2"


[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.5"
coverage = "^7.14.1"
tox = "^4.55.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
pytest-xdist = {version = "^3.8.0", extras=["psutil"]}
pytest-cov = "^7.1.0"
gevent = "^26.5.0"
ruff = "^0.15.22"
mypy = "^2.3.0"
pre-commit = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff's default `exclude` already covers .git, .venv, .tox, dist, build,
# node_modules, .mypy_cache, etc. Only list what it doesn't.
# `ai-tools/skills/*/scripts/` holds helper scripts vendored verbatim from the
# vinta-ai-workflows foundation skills. They are upstream code, not ours -
# reformatting them would make every future `vinta-update-project-skills` diff noisy.
# `implementations/` holds the officially supported companion packages as git
# submodules. Each has its own ruff config and its own CI - linting them from here
# would apply this repo's rules to code this repo does not release.
# `templates/` holds the in-repo implementation-template package: it has its own
# pyproject.toml, its own ruff config, and its own release cadence (none - it's
# copied, not published) - linting it from here would apply this repo's rules to
# a package this repo does not release either.
extend-exclude = ["htmlcov", "ai-tools/skills/*/scripts", "implementations", "templates"]
line-length = 100
indent-width = 4
# Must track the MINIMUM Python in [tool.poetry.dependencies]. Setting this higher
# lets pyupgrade rewrite code into syntax that breaks the older interpreters we
# still support and test against in tox (py310+).
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-builtins
    "A",
    # isort
    "I",
    # flake8-logging-format
    "G",
    # flake8-no-pep420
    "INP",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    # Disable Conflicting lint rules,
    # see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E501",
    "E111",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    # Allow `except Exception`:
    "BLE001",
    # Disable unused `noqa` directive
    "RUF100",
    # This library keeps `typing.X` aliases in annotations on purpose: the public
    # API ships py.typed and is consumed on py310, where some collections.abc
    # generics still behave differently at runtime under `from __future__` -less
    # modules.
    "UP035",
    "UP037",
]
# Allow unused variables when underscore-prefixed:
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
"__init__.py" = ["E402", "F403", "F405"]
"**/{tests,docs}/*" = ["E402", "F403", "F405", "S", "N802"]
"**/*test*.py" = ["E402", "F403", "F405", "S", "N802"]
# Stubs are test doubles shipped for downstream implementers to test against:
# same allowances as tests.
"**/stubs/*" = ["S", "N802"]

[tool.coverage.run]
branch = true
source = ["vintasend"]
concurrency = ["thread", "gevent", "multiprocessing"]
omit = [
    "**/venv/*",
    "**/env/*",
    "**/virtualenvs/*",
    "**/node_modules/*",
    "**/migrations/*",
    "**/settings/*",
    "**/tests/*",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "--dist=loadscope"
# Without this, a bare `pytest` from the repo root also collects the submodules under
# `implementations/`, which fail to import because their dependencies (django, celery,
# flask-mail, ...) are not in this repo's env. Each submodule runs its own suite.
testpaths = ["vintasend"]

[tool.mypy]
files = ["vintasend"]
# Must track the MINIMUM Python in [tool.poetry.dependencies]. Checking against a
# newer version hides errors that only appear on the oldest interpreter we support
# (e.g. `typing.Unpack` is 3.11+, so on py310 those annotations resolve differently).
python_version = "3.10"
show_error_codes = true
# This package ships py.typed, so its re-export surface is part of the public API:
# require anything re-exported to be declared in __all__ rather than leaking implicitly.
no_implicit_reexport = true
strict_equality = true
warn_no_return = true
# Deliberately NOT enabled yet, each needs a round of code changes first:
#   warn_redundant_casts    (12 hits)  - the adapter/backend seams lean on cast()
#   warn_return_any         (5 hits)
#   disallow_incomplete_defs (39 hits)
#   --strict                (560 hits)
# `warn_unreachable` and `warn_unused_ignores` are intentionally left off: the former
# flags the defensive isinstance() guards at the plugin boundaries (user-supplied
# adapters can violate the declared types at runtime), and the latter's result depends
# on whether the optional django/flask/fastapi packages happen to be installed.

[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

# Optional integrations probed at runtime in app_settings.py. None are declared
# dependencies, so they are absent in a clean checkout and in CI.
[[tool.mypy.overrides]]
module = ["django.*", "flask.*", "fastapi.*"]
ignore_missing_imports = true

# `tomli` is the sys.version_info < (3, 11) branch of the stdlib `tomllib` split in
# test_template_exclusion.py. It is only ever installed as a transitive dependency of
# mypy itself on py310, so it is absent from whichever interpreter happens to run mypy
# here; treat it as untyped rather than erroring on the import.
[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true
